fix: post thumbnail on ie

--- a/src/templates/Post/index.module.scss
+++ b/src/templates/Post/index.module.scss
@@ -62,6 +62,12 @@
     }
 }
 
+:global .-ie {
+    :local .thumbnailBackground {
+        display: none;
+    }
+}
+
 .thumbnail {
     z-index: 0;
     display: block;
